"added find student's seat feature"

--- a/views/seatingorderfind.ejs
+++ b/views/seatingorderfind.ejs
@@ -47,7 +47,7 @@
 
             <div style="margin-left: 15px;" class="alert alert-info" title="Block: <%= data.block %>&#010;Session: <%= data.session %>">
     
-                <div title="Roll Number: <%= rollNumber %>&#010;[Seat Number]: <%=sn%>&#010;(Row, Column): <%= sr %>,<%= sc %>">
+                <div>
                     <font style="font-weight: bolder;"><%= rollNumber %></font> in: <font style="font-size: medium; font-weight: bolder; color: #e92843;"><%= data.block %> </font>
                     <div>
                         <span id="inhere"></span>
