--- a/views/seatingorderfind.ejs
+++ b/views/seatingorderfind.ejs
@@ -109,7 +109,7 @@
 
         <% } else if(found === 'false'){%>
             <form action="" class="form-signin" >
-                <div class="alert alert-danger">Student hasn't been allocated!</div>
+                <div class="alert alert-danger"><font style="font-weight: bolder;"><%= rollNumber %></font> hasn't been allocated!</div>
             <div></div>
             </form>
             <% } %>
