"added front end previews for seating space"

--- a/views/seatingorder.ejs
+++ b/views/seatingorder.ejs
@@ -34,10 +34,10 @@
 
     <% if(type === 'teacher'){ %>
         <div class="text-right">
-            <a href="/seatingorderspace" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-primary">Create Seating Space</a>
             <% if(data.length != 0) {%>
-                <a href="/seatingorderfind" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-primary">Find Student's Seat</a>
+                <a title="Find Student's Seat" href="/seatingorderfind" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-lg btn-primary"><i class="fa fa-search" aria-hidden="true"></i></a>
             <% } %>
+            <a title="Create Seating Space" href="/seatingorderspace" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-lg btn-primary"><i class="fa fa-plus" aria-hidden="true"></i></a>
         </div>
 
 
