--- a/views/eventverify.ejs
+++ b/views/eventverify.ejs
@@ -5,7 +5,6 @@
 </title>
 
 <style>
-
     .form-signin {
         width: 100%;
         max-width: 450px;
@@ -13,39 +12,106 @@
     }
 </style>
 
+<script>
+
+function qrClick(){
+
+    Instascan.Camera.getCameras().then(function (cameras) {
+        scanner.start(cameras[1]); //starts rear camera(index 0 for front)
+
+        if (cameras[1] != "") {
+
+            scanner.start(cameras[1]);
+        } else {
+            alert('No Rear camera module found!');
+        }
+
+    }).catch(function (e) {
+        $(".modal").toggle();
+        $("#myModal").show();
+
+        alert("No camera modules found!");
+    });
+    
+    var scanner = new Instascan.Scanner({
+        video: document.getElementById('preview'),
+        scanPeriod: 5,
+        mirror: false
+    });
+
+    scanner.addListener('scan', function (content) {
+        window.location.href = `/scan/${content}`;
+    });
+
+}
+
+</script>
+
 <div class="container">
 
-    <a style="margin-left: 15px; margin-top: 20px;" href="/event" class="btn btn-outline-primary" role="button"><i class="fa fa-arrow-left"></i></a>
+    <a style="margin-left: 15px; margin-top: 20px;" href="/event" class="btn btn-outline-primary" role="button"><i
+            class="fa fa-arrow-left"></i></a>
 
     <form class="form-signin" action="/eventverify" method="POST">
-        <input required minlength="5" maxlength="5" type="text" name="tokenId" class="form-control" placeholder="Enter the Event ID">
 
-        <button type="submit" style="margin-top: 10px;" class="btn btn-primary">Search</button>
+        <h5>Verify Event ID</h5>
+
+        <div class="input-group mb-3">
+            <input required minlength="5" maxlength="5" type="text" name="tokenId" class="form-control"
+                placeholder="Event ID">
+            <div class="input-group-append">
+                <button style="opacity: 50%;" title="Scan using QR code" class="btn btn-primary" role="button" onclick="qrClick()"><i class="fa fa-lg fa-qrcode"></i></button>
+                <button title="Verify ID" class="btn btn-primary" type="submit"><i class="fa fa-lg fa-search"></i></button>
+            </div>
+        </div>
+
+        <div style="display: none;" class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h6 style="font-weight: bolder;" class="modal-title">  </h6>
+                    </div>
+                    <div class="modal-body">
+
+                        <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+
+                        <video id="preview" style="border-style: solid;"></video>
+
+                        <script type="text/javascript">
+                        </script>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
         <% if(found === "true"){ %>
         <div style="margin-top: 10px;" class="card alert alert-success" style="width: 18rem;">
             <div class="card-body">
+                <h5 class="card-title">Event ID: <strong> <%= tid %> </strong> </h5>
                 <h5 class="card-title">Registered Event Name: <strong> <%= eventName %> </strong> </h5>
                 <h5 class="card-title">Roll Number: <strong> <%= rollNumber %> </strong> </h5>
                 <h5 class="card-title">Name: <strong> <%= fullName %> </strong> </h5>
-                <h5 class="card-title">Department:   <strong> <%= department %> </strong></h5>
+                <h5 class="card-title">Department: <strong> <%= department %> </strong></h5>
                 <h5 class="card-title">Year:
                     <% if(year === "1"){ %>
-                        <strong style="font-family: 'Times New Roman', Times, serif;"> I </strong>
+                    <strong style="font-family: 'Times New Roman', Times, serif;"> I </strong>
                     <% } else if(year === "2"){%>
-                        <strong style="font-family: 'Times New Roman', Times, serif;"> II </strong>
+                    <strong style="font-family: 'Times New Roman', Times, serif;"> II </strong>
                     <% } else if(year === "3"){%>
-                        <strong style="font-family: 'Times New Roman', Times, serif;"> III </strong>
+                    <strong style="font-family: 'Times New Roman', Times, serif;"> III </strong>
                     <% } else if(year === "4"){%>
-                        <strong style="font-family: 'Times New Roman', Times, serif;"> IV </strong>
-                        <% } %>
+                    <strong style="font-family: 'Times New Roman', Times, serif;"> IV </strong>
+                    <% } %>
                 </h5>
             </div>
         </div>
         <% } else if(found === 'false'){%>
-            <div style="margin-top: 10px;" class="alert alert-danger">No Event ID matched!</div>
-            <div></div>
-            <% } %>
+        <div style="margin-top: 10px;" class="alert alert-danger">No Event ID matched!</div>
+        <div></div>
+        <% } %>
 
     </form>
 </div>
