--- a/views/eventverify.ejs
+++ b/views/eventverify.ejs
@@ -20,17 +20,17 @@ function qrClick(){
         scanner.start(cameras[1]); //starts rear camera(index 0 for front)
 
         if (cameras[1] != "") {
-
+            document.getElementById('errMsg').style.display = "none";
+            document.getElementById('preview').style.display = "block";
             scanner.start(cameras[1]);
         } else {
-            alert('No Rear camera module found!');
+            document.getElementById('errMsg').style.display = "block";
+            document.getElementById('preview').style.display = "none";
         }
 
-    }).catch(function (e) {
-        $(".modal").toggle();
-        $("#myModal").show();
-
-        alert("No camera modules found!");
+    }).catch(e => {
+        document.getElementById('errMsg').style.display = "block";
+        document.getElementById('preview').style.display = "none";
     });
     
     var scanner = new Instascan.Scanner({
@@ -40,7 +40,11 @@ function qrClick(){
     });
 
     scanner.addListener('scan', function (content) {
-        window.location.href = `/scan/${content}`;
+
+        document.getElementById('tokenId').value = content;
+        document.getElementById('eventVerify').submit();
+
+        window.location.href = `/eventverify`;
     });
 
 }
@@ -52,35 +56,34 @@ function qrClick(){
     <a style="margin-left: 15px; margin-top: 20px;" href="/event" class="btn btn-outline-primary" role="button"><i
             class="fa fa-arrow-left"></i></a>
 
-    <form class="form-signin" action="/eventverify" method="POST">
+    <form class="form-signin" action="/eventverify" id="eventVerify" method="POST">
 
         <h5>Verify Event ID</h5>
 
         <div class="input-group mb-3">
-            <input required minlength="5" maxlength="5" type="text" name="tokenId" class="form-control"
-                placeholder="Event ID">
+            <input required minlength="5" maxlength="5" type="text" id="tokenId" name="tokenId" class="form-control" placeholder="Event ID">
             <div class="input-group-append">
-                <button style="opacity: 50%;" title="Scan using QR code" class="btn btn-primary" role="button" onclick="qrClick()"><i class="fa fa-lg fa-qrcode"></i></button>
+                <a style="opacity: 50%;" title="Scan using QR code" class="btn btn-primary" data-toggle="modal" data-target="#myModal" onclick="qrClick()"><i style="margin-top: 5px;" class="fa fa-lg fa-qrcode"></i></a>
                 <button title="Verify ID" class="btn btn-primary" type="submit"><i class="fa fa-lg fa-search"></i></button>
             </div>
         </div>
 
-        <div style="display: none;" class="modal fade" id="myModal" role="dialog">
+        <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog">
 
                 <div class="modal-content">
-                    <div class="modal-header">
-                        <h6 style="font-weight: bolder;" class="modal-title">  </h6>
+                    <div id="preview" class="modal-header">
+                        <h6 style="font-weight: bolder;" class="modal-title">Scan the Event ID's QR code</h6>
                     </div>
                     <div class="modal-body">
 
                         <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 
-                        <video id="preview" style="border-style: solid;"></video>
+                        <div id="preview">
+                            <video id="preview" style="display: none; border-style: solid;"></video>
+                        </div>
 
-                        <script type="text/javascript">
-                        </script>
-
+                        <div class="alert alert-danger" id="errMsg">No Camera Modules detected!</div>
                     </div>
                 </div>
 
