--- a/views/eventverify.ejs
+++ b/views/eventverify.ejs
@@ -20,17 +20,13 @@ function qrClick(){
         scanner.start(cameras[1]); //starts rear camera(index 0 for front)
 
         if (cameras[1] != "") {
-            document.getElementById('errMsg').style.display = "none";
-            document.getElementById('preview').style.display = "block";
             scanner.start(cameras[1]);
         } else {
-            document.getElementById('errMsg').style.display = "block";
-            document.getElementById('preview').style.display = "none";
+            alert('No Rear camera module found!');
         }
 
     }).catch(e => {
-        document.getElementById('errMsg').style.display = "block";
-        document.getElementById('preview').style.display = "none";
+        alert("No camera modules found!");
     });
     
     var scanner = new Instascan.Scanner({
@@ -72,18 +68,14 @@ function qrClick(){
             <div class="modal-dialog">
 
                 <div class="modal-content">
-                    <div id="preview" class="modal-header">
+                    <div class="modal-header">
                         <h6 style="font-weight: bolder;" class="modal-title">Scan the Event ID's QR code</h6>
                     </div>
                     <div class="modal-body">
-
                         <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
-
                         <div id="preview">
                             <video id="preview" style="display: none; border-style: solid;"></video>
                         </div>
-
-                        <div class="alert alert-danger" id="errMsg">No Camera Modules detected!</div>
                     </div>
                 </div>
 
